Change button background colors in index.html
Updated button styles for better visibility.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body style="background-color: rgb(175, 92, 15);">
     <main>
       <section>
          <div class="card">
@@ -132,8 +132,8 @@
 
      <section>
       <div class="px-5">
-        <input class="btn btn-primary" type="submit" value="Submit" style="background-color: rgba(136, 126, 39, 0.747);">
-        <input type="button" value="Clear form" class="btn float-end" style="background:transparent;border:none;color:var(--bs-primary); color: rgba(105, 98, 31, 0.87);">
+        <input class="btn btn-primary" type="submit" value="Submit" style="background-color: rgba(179, 165, 47, 0.747);">
+        <input type="button" value="Clear form" class="btn float-end" style="background:transparent;border:none;color:var(--bs-primary); color:rgb(184, 169, 33);">
       </div>
 
       <div class="d-flex justify-content-center">
